# ssphub-ateliers-parquet

./: .gitignore  .nojekyll  DESCRIPTION  Dockerfile  _quarto.yml  exercise.qmd  index.html  index.qmd  init_python.sh  init_r.sh  parquet.html  parquet.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml  vscode.lua
.github/workflows/: website.yaml
R/: benchmark.R  benchmark_functions.R  exo1.R  exo2.R  exo3.R  exo4.R  install.R
bench/: mark1.html  mark2.html  mark3.html
init/: api.sh  r.sh
python/: _s3.qmd
sessions/: api.qmd  create_environment.R  parquet.qmd  utils_parquet.py
site_libs/bootstrap/: bootstrap-cbb56798d03c8fd1c10f24bc05b4e88f.min.css
slides/: api.qmd
